2004/01/25 23:37 (+0100) kaffeetisch

	* examples/simplelist.pl
	* pm/SimpleList.pm
	* t/GtkSimpleList.t: Implement, document, test and demonstrate a
	'markup' column type that can be used to put pango markup into
	cells.

	* xs/Gtk2.xs: Remove all references to the apparently unused
	'shadow' variable in the gtk_init xsub.

2004/01/25 10:51 (-0500) rwmcfa1

	* xs/GdkEvent.xs: moved ->x/y out of base class (they didn't belong 
	there anyway and into the specific events that have them. which allowed
	them to be implemented as set/get accessors. the doc for event was 
	messed up as well, all of the stuff was put on the event object when 
	many of the methods were only available on certian even types. this does
	now cause several event pod to be created, but that's much cleaner and
	clearer. added custom pod to each of the event types saying they're 
	parent is base event. also added a list of event types to the parent
	event's pod.

	* t/GdkEvent.t: test all of the new set/get x/y accessors on the 
	appropriate event types.

2004/01/25 13:13 (+0100) kaffeetisch

	* MANIFEST
	A t/GdkDrawable.t
	A t/GdkGC.t
	A t/GdkScreen.t: New tests.

	* xs/GdkDrawable.xs: Implement get_clip_region, get_visible_region
	and draw_point.

	* xs/GdkGC.xs: Fix various typos.  Initialize the mask in
	read_gcvalues_from_sv.  Implement set_values and get_colormap.
	Remove a g_printerr.

2004/01/25 04:10 (-0500) muppetman

	* Gtk2.pm, README, NEWS: unstable release 1.031

	* Makefile.PL, README: update Glib requirement to 1.031.

2004/01/25 01:50 (-0500) muppetman

	* examples/buttonbox.pl, examples/calendar.pl, examples/color_list.pl,
	examples/histogramplot.pl, examples/layout.pl, examples/rulers.pl,
	examples/scribble.pl, examples/socket.pl, examples/thread_usage.pl,
	gtk-demo/appwindow.pl, gtk-demo/button_box.pl,
	gtk-demo/changedisplay.pl, gtk-demo/colorsel.pl, gtk-demo/dialog.pl,
	gtk-demo/drawingarea.pl, gtk-demo/editable_cells.pl,
	gtk-demo/entry_completion.pl, gtk-demo/hypertext.pl,